--- a/files/templates/header.html
+++ b/files/templates/header.html
@@ -3,7 +3,7 @@
 <nav class="navbar navbar-expand-md navbar-light shadow shadow-md fixed-top" id="navbar">
 	<div class="container-fluid" style="padding:0;">
 		<div class="flex-grow-1">
-			<a {% if v %}href="/"{% else %}href="/logged_out"{% endif %} class="navbar-brand">
+			<a href="/" class="navbar-brand">
 				<img loading="lazy" height="30" src="/assets/images/{{'SITE_NAME' | app_config}}/headericon.gif">
 				<img loading="lazy" src="/assets/images/{{'SITE_NAME' | app_config}}/logo.gif" height="20">
 			</a>
