--- a/files/templates/header.html
+++ b/files/templates/header.html
@@ -4,8 +4,8 @@
 	<div class="container-fluid" style="padding:0;">
 		<div class="flex-grow-1">
 			<a href="/" class="navbar-brand">
-				<img loading="lazy" height="30" src="/assets/images/{{'SITE_NAME' | app_config}}/headericon.gif">
-				<img loading="lazy" src="/assets/images/{{'SITE_NAME' | app_config}}/logo.gif" height="20">
+				<img loading="lazy" height="30" src="/assets/images/headericon.gif">
+				<img loading="lazy" src="/assets/images/logo.gif" height="20">
 			</a>
 		</div>
 		<div class="flex-grow-1 d-fl d-none d-md-block">
