--- a/files/templates/default.html
+++ b/files/templates/default.html
@@ -859,9 +859,9 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-	<meta name="thumbnail" content="/assets/images/{{'SITE_NAME' | app_config}}/preview.gif">
+	<meta name="thumbnail" content="/assets/images/preview.gif">
 
-	<link rel="icon" type="image/png" href="/assets/images/{{'SITE_NAME' | app_config}}/icon.gif">
+	<link rel="icon" type="image/png" href="/assets/images/icon.gif">
 	
 	{% block title %}
 	<title>{{'SITE_NAME' | app_config}}</title>
@@ -869,7 +869,7 @@
 	<meta property="og:type" content="article" />
 	<meta property="og:title" content="{{'SITE_NAME' | app_config}}" />
 	<meta property="og:site_name" content="{{request.host}}" />
-	<meta property="og:image" content="{{'SITE_NAME' | app_config}}/assets/images/{{'SITE_NAME' | app_config}}/preview.gif" />
+	<meta property="og:image" content="{{'SITE_NAME' | app_config}}/assets/images/preview.gif" />
 	<meta property="og:url" content="{{request.path | full_link}}">
 	<meta property="og:description" name="description" content="{{'SLOGAN' | app_config}}">
 	<meta property="og:author" name="author" content="@{{request.host_url}}" />
@@ -880,7 +880,7 @@
 	<meta name="twitter:title" content="{{'SITE_NAME' | app_config}}" />
 	<meta name="twitter:creator" content="@{{request.host_url}}">
 	<meta name="twitter:description" content="{{'SLOGAN' | app_config}}" />
-	<meta name="twitter:image" content="/assets/images/{{'SITE_NAME' | app_config}}/preview.gif" />
+	<meta name="twitter:image" content="/assets/images/preview.gif" />
 	<meta name="twitter:url" content="{{request.path | full_link}}" />
 	{% endblock %}
 
@@ -894,12 +894,12 @@
 	<meta name="format-detection" content="telephone=no">
 	<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
 
-	<link rel="apple-touch-icon" sizes="180x180" href="/assets/images/{{'SITE_NAME' | app_config}}/icon.gif">
-	<!---<link rel="icon" type="image/png" sizes="32x32" href="/assets/images/{{'SITE_NAME' | app_config}}/icon.gif">
-		<link rel="icon" type="image/png" sizes="16x16" href="/assets/images/{{'SITE_NAME' | app_config}}/icon.gif">--->
+	<link rel="apple-touch-icon" sizes="180x180" href="/assets/images/icon.gif">
+	<!---<link rel="icon" type="image/png" sizes="32x32" href="/assets/images/icon.gif">
+		<link rel="icon" type="image/png" sizes="16x16" href="/assets/images/icon.gif">--->
 		<link rel="manifest" href="/assets/manifest.json">
-		<link rel="mask-icon" href="/assets/images/{{'SITE_NAME' | app_config}}/icon.gif" color="#{{'DEFAULT_COLOR' | app_config}}">
-		<link rel="shortcut icon" href="/assets/images/{{'SITE_NAME' | app_config}}/icon.gif">
+		<link rel="mask-icon" href="/assets/images/icon.gif" color="#{{'DEFAULT_COLOR' | app_config}}">
+		<link rel="shortcut icon" href="/assets/images/icon.gif">
 		<meta name="apple-mobile-web-app-title" content="{{'SITE_NAME' | app_config}}">
 		<meta name="application-name" content="{{'SITE_NAME' | app_config}}">
 		<meta name="msapplication-TileColor" content="#{{'DEFAULT_COLOR' | app_config}}">
@@ -911,127 +911,127 @@
 		<link
 		rel="apple-touch-startup-image"
 		sizes="320x480"
-		href="/assets/images/{{'SITE_NAME' | app_config}}/icon.gif"
+		href="/assets/images/icon.gif"
 		/>
 		<link
 		rel="apple-touch-startup-image"
 		sizes="640x960"
-		href="/assets/images/{{'SITE_NAME' | app_config}}/icon.gif"
+		href="/assets/images/icon.gif"
 		/>
 		<link
 		rel="apple-touch-icon"
 		sizes="640x1136"
-		href="/assets/images/{{'SITE_NAME' | app_config}}/icon.gif"
+		href="/assets/images/icon.gif"
 		/>
 		<link
 		rel="apple-touch-icon"
 		sizes="750x1334"
-		href="/assets/images/{{'SITE_NAME' | app_config}}/icon.gif"
+		href="/assets/images/icon.gif"
 		/>
 		<link
 		rel="apple-touch-startup-image"
 		sizes="768x1004"
-		href="/assets/images/{{'SITE_NAME' | app_config}}/icon.gif"
+		href="/assets/images/icon.gif"
 		/>
 		<link
 		rel="apple-touch-startup-image"
 		sizes="768x1024"
-		href="/assets/images/{{'SITE_NAME' | app_config}}/icon.gif"
+		href="/assets/images/icon.gif"
 		/>
 		<link
 		rel="apple-touch-startup-image"
 		sizes="828x1792"
-		href="/assets/images/{{'SITE_NAME' | app_config}}/icon.gif"
+		href="/assets/images/icon.gif"
 		/>
 		<link
 		rel="apple-touch-startup-image"
 		sizes="1024x748"
-		href="/assets/images/{{'SITE_NAME' | app_config}}/icon.gif"
+		href="/assets/images/icon.gif"
 		/>
 		<link
 		rel="apple-touch-startup-image"
 		sizes="1024x768"
-		href="/assets/images/{{'SITE_NAME' | app_config}}/icon.gif"
+		href="/assets/images/icon.gif"
 		/>
 		<link
 		rel="apple-touch-startup-image"
 		sizes="1125x2436"
-		href="/assets/images/{{'SITE_NAME' | app_config}}/icon.gif"
+		href="/assets/images/icon.gif"
 		/>
 		<link
 		rel="apple-touch-startup-image"
 		sizes="1242x2208"
-		href="/assets/images/{{'SITE_NAME' | app_config}}/icon.gif"
+		href="/assets/images/icon.gif"
 		/>
 		<link
 		rel="apple-touch-startup-image"
 		sizes="1242x2688"
-		href="/assets/images/{{'SITE_NAME' | app_config}}/icon.gif"
+		href="/assets/images/icon.gif"
 		/>
 		<link
 		rel="apple-touch-startup-image"
 		sizes="1334x750"
-		href="/assets/images/{{'SITE_NAME' | app_config}}/icon.gif"
+		href="/assets/images/icon.gif"
 		/>
 		<link
 		rel="apple-touch-startup-image"
 		sizes="1536x2008"
-		href="/assets/images/{{'SITE_NAME' | app_config}}/icon.gif"
+		href="/assets/images/icon.gif"
 		/>
 		<link
 		rel="apple-touch-startup-image"
 		sizes="1536x2048"
-		href="/assets/images/{{'SITE_NAME' | app_config}}/icon.gif"
+		href="/assets/images/icon.gif"
 		/>
 		<link
 		rel="apple-touch-startup-image"
 		sizes="1668x2224"
-		href="/assets/images/{{'SITE_NAME' | app_config}}/icon.gif"
+		href="/assets/images/icon.gif"
 		/>
 		<link
 		rel="apple-touch-startup-image"
 		sizes="1792x828"
-		href="/assets/images/{{'SITE_NAME' | app_config}}/icon.gif"
+		href="/assets/images/icon.gif"
 		/>
 		<link
 		rel="apple-touch-startup-image"
 		sizes="2048x1496"
-		href="/assets/images/{{'SITE_NAME' | app_config}}/icon.gif"
+		href="/assets/images/icon.gif"
 		/>
 		<link
 		rel="apple-touch-startup-image"
 		sizes="2048x1536"
-		href="/assets/images/{{'SITE_NAME' | app_config}}/icon.gif"
+		href="/assets/images/icon.gif"
 		/>
 		<link
 		rel="apple-touch-startup-image"
 		sizes="2048x2732"
-		href="/assets/images/{{'SITE_NAME' | app_config}}/icon.gif"
+		href="/assets/images/icon.gif"
 		/>
 		<link
 		rel="apple-touch-startup-image"
 		sizes="2208x1242"
-		href="/assets/images/{{'SITE_NAME' | app_config}}/icon.gif"
+		href="/assets/images/icon.gif"
 		/>
 		<link
 		rel="apple-touch-startup-image"
 		sizes="2224x1668"
-		href="/assets/images/{{'SITE_NAME' | app_config}}/icon.gif"
+		href="/assets/images/icon.gif"
 		/>
 		<link
 		rel="apple-touch-startup-image"
 		sizes="2436x1125"
-		href="/assets/images/{{'SITE_NAME' | app_config}}/icon.gif"
+		href="/assets/images/icon.gif"
 		/>
 		<link
 		rel="apple-touch-startup-image"
 		sizes="2668x1242"
-		href="/assets/images/{{'SITE_NAME' | app_config}}/icon.gif"
+		href="/assets/images/icon.gif"
 		/>
 		<link
 		rel="apple-touch-startup-image"
 		sizes="2737x2048"
-		href="/assets/images/{{'SITE_NAME' | app_config}}/icon.gif"
+		href="/assets/images/icon.gif"
 		/>
 
 
@@ -1066,7 +1066,7 @@
 
  <body id="{% if request.path != '/comments' %}{% block pagetype %}frontpage{% endblock %}{% endif %}" style="overflow-x: hidden; {% if v and v.background %} background:url(/assets/images/backgrounds/{{v.background}}) no-repeat center center fixed !important; background-size: cover!important; background-color: #000!important;{% endif %}">
 
-<a  rel="nofollow noopener noreferrer" href="{% if 'rdrama' in request.host %}https://secure.transequality.org/site/Donation2?df_id=1480{% else %}/{% endif %}"><img loading="lazy" src="/assets/images/{{'SITE_NAME' | app_config}}/{% if v %}banner.gif{% else %}cached.gif{% endif %}" width="100%"></a>
+<a  rel="nofollow noopener noreferrer" href="{% if 'rdrama' in request.host %}https://secure.transequality.org/site/Donation2?df_id=1480{% else %}/{% endif %}"><img loading="lazy" src="/assets/images/banner.gif" width="100%"></a>
 
 {% include "header.html" %}
 
