--- a/files/templates/marseyverse.html
+++ b/files/templates/marseyverse.html
@@ -3,7 +3,40 @@
 <head>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/clipboard@2.0.8/dist/clipboard.min.js"></script>
-	<script src="/assets/marseyverse.js"></script>
+	<script>
+		var clipboard = new ClipboardJS('.copy-link');
+		clipboard.on('success', function(e) {
+				var myToast = new bootstrap.Toast(document.getElementById('toast-success'));
+				myToast.show();
+				console.log(e);
+		});
+
+		function expandDesktopImage(image) {
+			var linkText = document.getElementById("desktop-expanded-image-link");
+			var imgLink = document.getElementById("desktop-expanded-image-wrap-link");
+
+			var inlineImage = document.getElementById("desktop-expanded-image");
+
+			inlineImage.src = image.replace("100w.webp", "giphy.webp");
+			linkText.href = image;
+			imgLink.href=image;
+
+			linkText.textContent = 'View original';
+		};
+
+		function expandText(id) {
+			document.getElementById('post-text-'+id).classList.toggle('d-none');
+			document.getElementsByClassName('text-expand-icon-'+id)[0].classList.toggle('fa-expand-alt');
+			document.getElementsByClassName('text-expand-icon-'+id)[0].classList.toggle('fa-compress-alt');
+		};
+
+		document.addEventListener("DOMContentLoaded", function(){
+			var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'));
+			tooltipTriggerList.map(function(element){
+				return new bootstrap.Tooltip(element);
+			});
+		});
+	</script>
 	
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -344,74 +377,9 @@
 	</div>
 </div>
 
-<div class="container d-inline-flex d-lg-none">
-
-	<div class="row fixed-bottom bg-white border-top p-2" id="mobile-bottom-navigation-bar"
-	style="z-index: 100; bottom: 0px; transition: bottom cubic-bezier(0, 0, 0.2, 1) 220ms;">
-
-			<button type="button" class="col px-0 pl-2 btn btn-dead m-0" style="border-color: transparent !important;">
-					<a href="/" class="text-decoration-none" role="button">
-							<div class="text-center {% if request.path=='/' and request.full_path!='/?sort=hot&t=all' and request.full_path!='/?sort=new&t=all' %}text-purple{% else %}text-muted{% endif %}">
-									<i class="fas fa-home-alt text-lg d-block"></i>
-									<div class="text-small">Home</div>
-							</div>
-					</a>
-			</button>
-			<button type="button" class="col px-0 btn btn-dead m-0" style="border-color: transparent !important;">
-					<a href="/?sort=new&t=all" class="text-decoration-none" role="button">
-							<div class="text-center {% if request.full_path=='/?sort=new&t=all' %}text-purple{% else %}text-muted{% endif %}">
-									<i class="fas fa-sparkles text-lg d-block"></i>
-									<div class="text-small">New</div>
-							</div>
-					</a>
-			</button>
-			<button type="button" class="col px-2 btn btn-dead m-0" style="border-color: transparent !important;">
-					<a href="/comments" class="text-decoration-none" role="button">
-							<div class="text-center {% if request.path=='/comments' %}text-purple{% else %}text-muted{% endif %}">
-									<i class="fas fa-comment-dots text-lg d-block"></i>
-									<div class="text-small">Comments</div>
-							</div>
-					</a>
-			</button>
-			<button type="button" class="col px-0 btn btn-dead m-0" style="border-color: transparent !important;">
-					<a href="/leaderboard" class="text-decoration-none" role="button">
-							<div class="text-center {% if request.path=='/leaderboard' %}text-purple{% else %}text-muted{% endif %}">
-									<i class="fas fa-trophy text-lg d-block"></i>
-									<div class="text-small">Users</div>
-							</div>
-					</a>
-			</button>
-			<button type="button" class="col px-0 pr-2 btn btn-dead m-0" style="border-color: transparent !important;">
-					<a href="/signup" class="text-decoration-none" role="button">
-							<div class="text-center text-muted">
-									<i class="fas fa-user-plus text-lg d-block"></i>
-									<div class="text-small">Sign Up</div>
-							</div>
-					</a>
-			</button>
-	</div>
-</div>
-
 <div class="toast clipboard" id="toast-success" role="alert" aria-live="assertive" aria-atomic="true" data-bs-animation="true" data-bs-autohide="true" data-bs-delay="5000">
 	<div class="toast-body text-center">
 		<i class="fas fa-check-circle text-success mr-2"></i>Link copied to clipboard
-	</div>
-</div>
-
-<div class="toast clipboard" id="toast-error" role="alert" aria-live="assertive" aria-atomic="true" data-bs-animation="true" data-bs-autohide="true" data-bs-delay="5000">
-	<div class="toast-body text-center">
-		<i class="fas fa-exclamation-circle text-danger mr-2"></i>Unable to copy link
-	</div>
-</div>
-
-<div class="toast" id="toast-post-success" style="position: fixed; bottom: 1.5rem; margin: 0 auto; left: 0; right: 0; width: 275px; z-index: 1000" role="alert" aria-live="assertive" aria-atomic="true" data-bs-animation="true" data-bs-autohide="true" data-bs-delay="5000">
-	<div class="toast-body bg-success text-center text-white">
-		<i class="fas fa-comment-alt-smile mr-2"></i><span id="toast-post-success-text"></span>
-	</div>
-</div>
-<div class="toast" id="toast-post-error" style="position: fixed; bottom: 1.5rem; margin: 0 auto; left: 0; right: 0; width: 275px; z-index: 1000" role="alert" aria-live="assertive" aria-atomic="true" data-bs-animation="true" data-bs-autohide="true" data-bs-delay="5000">
-	<div class="toast-body bg-danger text-center text-white">
-		<i class="fas fa-exclamation-circle mr-2"></i><span id="toast-post-error-text"></span>
 	</div>
 </div>
 
