--- a/files/templates/marseyverse.html
+++ b/files/templates/marseyverse.html
@@ -361,7 +361,7 @@
 						</div>
 						
 						{% if p.body %}
-							<div class="d-none card rounded border pb-0 pt-3 my-2" id="post-text-{{p.id}}">
+							<div class="d-none card rounded border py-3 my-2" id="post-text-{{p.id}}">
 								{{p.body | safe}}
 							</div>
 						{% endif %}
